--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@opuscapita/filemanager-server": "^1.1.7",
+    "@opuscapita/react-filemanager": "^1.1.7",
+    "@opuscapita/react-filemanager-connector-node-v1": "^1.1.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
