--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.19",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@opuscapita/filemanager-server": "^1.1.7",
     "@opuscapita/react-filemanager": "^1.1.7",
     "@opuscapita/react-filemanager-connector-node-v1": "^1.1.7",
