--- a/server/gqlserver/package.json
+++ b/server/gqlserver/package.json
@@ -1,16 +1,35 @@
 {
-  "name": "gqlserver",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "typescript-graphql",
+  "license": "MIT",
   "scripts": {
-    "start": "node ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --no-notify --respawn --transpile-only src/server",
+    "start": "node dist/server",
+    "clean": "rm -rf dist",
+    "build": "npm -s run clean && npm -s run generate && tsc",
+    "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
+    "generate:prisma": "prisma generate",
+    "generate:nexus": "ts-node --transpile-only src/schema"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "graphql-yoga": "^1.18.3"
+    "@prisma/client": "2.23.0",
+    "apollo-server": "2.24.1",
+    "graphql": "15.5.0",
+    "graphql-scalars": "1.9.3",
+    "nexus": "1.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "12.20.13",
+    "prisma": "2.23.0",
+    "ts-node": "9.1.1",
+    "ts-node-dev": "1.1.6",
+    "typescript": "4.2.4"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false,
+    "trailingComma": "all"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
