--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.19",
+    "@chatscope/chat-ui-kit-react": "^1.7.2",
+    "@chatscope/chat-ui-kit-styles": "^1.2.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/system": "^4.11.3",
     "@opuscapita/filemanager-server": "^1.1.7",
     "@opuscapita/react-filemanager": "^1.1.7",
     "@opuscapita/react-filemanager-connector-node-v1": "^1.1.7",
