--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-media-recorder": "^1.4.0",
     "react-scripts": "4.0.3",
     "react-voice-recorder": "^2.1.0",
     "web-vitals": "^1.0.1"
