--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "audio-react-recorder": "^1.0.4",
     "dotenv": "^9.0.2",
     "graphql": "^15.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-media-recorder": "^1.4.0",
+    "react-mic": "^12.4.6",
     "react-scripts": "4.0.3",
     "react-voice-recorder": "^2.1.0",
     "web-vitals": "^1.0.1"
