--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^17.0.2",
     "react-media-recorder": "^1.4.0",
     "react-mic": "^12.4.6",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-voice-recorder": "^2.1.0",
     "web-vitals": "^1.0.1"
