--- a/src/explorer/explorer-node/package.json
+++ b/src/explorer/explorer-node/package.json
@@ -3,13 +3,7 @@
   "version": "1.1.7",
   "description": "@opuscapita/filemanager connector for NodeJS API v1",
   "main": "lib/index.js",
-  "scripts": {
-    "start": "babel --watch --copy-files src --out-dir lib",
-    "lint": "eslint src",
-    "lint-fix": "eslint src --fix",
-    "build": "rimraf lib && babel --copy-files src --out-dir lib",
-    "prepublish": "npm run build"
-  },
+  "scripts": {},
   "license": "Apache-2.0",
   "repository": "OpusCapita/react-filemanager",
   "publishConfig": {
