--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-media-player": "^0.7.9",
     "react-media-recorder": "^1.4.0",
     "react-mic": "^12.4.6",
     "react-scripts": "4.0.3",
