--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apollo-boost": "^0.4.9",
+    "apollo-client": "^2.6.10",
     "audio-react-recorder": "^1.0.4",
+    "chonky": "^2.1.0",
+    "chonky-icon-fontawesome": "^2.1.0",
     "dotenv": "^9.0.2",
     "graphql": "^15.5.0",
+    "graphql-tag": "^2.12.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
     "react-media-player": "^0.7.9",
     "react-media-recorder": "^1.4.0",
