--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-h5-audio-player": "^3.7.1",
     "react-media-player": "^0.7.9",
     "react-media-recorder": "^1.4.0",
     "react-mic": "^12.4.6",
+    "react-mic-record": "^1.0.6",
+    "react-player": "^2.9.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-voice-recorder": "^2.1.0",
+    "video-react": "^0.14.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
