--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^10.0.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
+    "material-ui-dropzone": "^3.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
