--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-voice-recorder": "^2.1.0",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2",
     "video-react": "^0.14.1",
     "web-vitals": "^1.0.1"
   },
