--- a/server/textserver/package.json
+++ b/server/textserver/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "*",
-    "node-fetch": "^2.6.1"
+    "http": "*",
+    "node-fetch": "^2.6.1",
+    "socket.io": "^4.1.2"
   }
 }
