--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-boost": "^0.4.9",
     "apollo-client": "^2.6.10",
     "audio-react-recorder": "^1.0.4",
+    "blob-util": "^2.0.2",
     "chonky": "^2.1.0",
     "chonky-icon-fontawesome": "^2.1.0",
     "cors": "^2.8.5",
