--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.9.2",
     "react-h5-audio-player": "^3.7.1",
     "react-media-player": "^0.7.9",
     "react-media-recorder": "^1.4.0",
