--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chonky-icon-fontawesome": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "get-blob-duration": "^1.2.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
     "korean-text-analytics": "^0.0.7",
@@ -29,6 +30,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^17.0.2",
     "react-h5-audio-player": "^3.7.1",
     "react-media-player": "^0.7.9",
