--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "korean-text-analytics": "^0.0.7",
     "material-ui-dropzone": "^3.5.0",
     "node-fetch": "^2.6.1",
+    "notistack": "^1.0.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
