--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-voice-recorder": "^2.1.0",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
+    "use-elapsed-time": "^2.1.8",
     "video-react": "^0.14.1",
     "web-vitals": "^1.0.1"
   },
