--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "graphql-tag": "^2.12.4",
     "korean-text-analytics": "^0.0.7",
     "material-ui-dropzone": "^3.5.0",
+    "material-ui-popup-state": "^1.8.3",
     "node-fetch": "^2.6.1",
     "notistack": "^1.0.9",
     "prop-types": "^15.7.2",
