--- a/server/backend/package.json
+++ b/server/backend/package.json
@@ -13,7 +13,12 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
+    "koa-logger": "^3.2.1",
+    "koa-proxies": "^0.12.1",
     "nodemon": "^2.0.8"
   }
 }
