--- a/server/backend/package.json
+++ b/server/backend/package.json
@@ -11,14 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/speech": "^4.5.3",
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
     "axios": "^0.21.1",
+    "chalk": "^2.4.2",
     "dotenv": "^10.0.0",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "koa-proxies": "^0.12.1",
-    "nodemon": "^2.0.8"
+    "node-record-lpcm16": "^1.0.1",
+    "nodemon": "^2.0.8",
+    "socket.io": "^4.1.2"
   }
 }
