--- a/server/backend/package.json
+++ b/server/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple backend server for record toy project",
   "main": "index.js",
   "scripts": {
     "start": "node src",
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.21.0",
     "@google-cloud/speech": "^4.5.3",
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
+    "aws-sdk": "^2.943.0",
     "axios": "^0.21.1",
     "chalk": "^2.4.2",
     "dotenv": "^10.0.0",
@@ -23,6 +25,7 @@
     "koa-proxies": "^0.12.1",
     "node-record-lpcm16": "^1.0.1",
     "nodemon": "^2.0.8",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "uuid": "^8.3.2"
   }
 }
