--- a/server/gqlserver/package.json
+++ b/server/gqlserver/package.json
@@ -11,9 +11,8 @@
     "generate:nexus": "ts-node --transpile-only src/schema"
   },
   "dependencies": {
-    "@prisma/client": "2.23.0",
+    "@prisma/client": "^2.23.0",
     "apollo-server": "2.24.1",
-    "crypto": "^1.0.1",
     "graphql": "15.5.0",
     "graphql-scalars": "1.9.3",
     "nexus": "1.0.0"
