--- a/server/backend/package.json
+++ b/server/backend/package.json
@@ -23,6 +23,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "koa-proxies": "^0.12.1",
+    "koa2-formidable": "^1.0.3",
     "node-record-lpcm16": "^1.0.1",
     "nodemon": "^2.0.8",
     "socket.io": "^4.1.2",
