--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@chatscope/chat-ui-kit-react": "^1.7.2",
     "@chatscope/chat-ui-kit-styles": "^1.2.0",
     "@google-cloud/storage": "^5.8.5",
-    "@material-ui/core": "^4.11.4",
+    "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/system": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -23,11 +23,13 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "get-blob-duration": "^1.2.0",
+    "get-user-media-promise": "^1.1.4",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
     "korean-text-analytics": "^0.0.7",
     "material-ui-dropzone": "^3.5.0",
     "material-ui-popup-state": "^1.8.3",
+    "microphone-stream": "^6.0.1",
     "node-fetch": "^2.6.1",
     "notistack": "^1.0.9",
     "prop-types": "^15.7.2",
@@ -48,6 +50,7 @@
     "react-voice-recorder": "^2.1.0",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
+    "socket.io-stream": "^0.9.1",
     "use-elapsed-time": "^2.1.8",
     "video-react": "^0.14.1",
     "web-vitals": "^1.0.1"
