--- a/server/gqlserver/package.json
+++ b/server/gqlserver/package.json
@@ -21,7 +21,7 @@
     "@types/node": "12.20.13",
     "prisma": "2.23.0",
     "ts-node": "9.1.1",
-    "ts-node-dev": "1.1.6",
+    "ts-node-dev": "^1.1.8",
     "typescript": "4.2.4"
   },
   "prettier": {
